--- a/TODO
+++ b/TODO
@@ -5,3 +5,8 @@
 + added Open AWS Console command
 
 - get rid of RegexKitLite, use NSRegularExpression (available in 10.7+)
+
+- add Security Group name
+
+- add Autoscaling Group name (?)
+- add more metrics (?)
